--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,9 +19,15 @@ linters:
     - typecheck
     - unparam
     - unused
+    - wrapcheck
 issues:
   exclude:
     # https://github.com/kyoh86/scopelint/issues/4
     - Using the variable on range scope `tc` in function literal
+  exclude-rules:
+    - path: "_test\\.go"
+      linters:
+        - funlen
+        - wrapcheck
   max-issues-per-linter: 0
   max-same-issues: 0
